<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movie and TV Show</string>
    <string name="tv_show">TV Show</string>
    <string name="change_language_settings">Change Language Settings</string>

    <!-- START: Movie Resources -->
    <string name="overview">Overview</string>
    <string name="featured_crew">Featured Crew</string>

    <string name="title_detail">Title Detail</string>
    <string name="overview_detail">Overview Detail</string>
    <string name="title_activity_movie_details">movie details</string>
    <string name="title_home">title home</string>
    <string name="poster_image">poster image</string>
    <string name="release_date">release_date</string>
    <string name="movie_catalogue">Movie Catalogue</string>
    <string name="title_item">title items</string>
    <string name="release_date_">Release Date</string>
    <string name="icon_date">icon date</string>
    <string name="icon_star">icon star</string>
    <string name="_10">10</string>
    <string name="title_activity_tvshow_details">TVShowDetails</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="list_of_favorite_movie">List of Favorite Movie</string>
    <string name="add_to_favorite">ADD TO FAVORITE</string>
    <string name="delete_from_favorite">DELETE FROM FAVORITE</string>
    <string name="added_to_favorite">Added to Favorite</string>
    <string name="deleted_from_favorite">Deleted from Favorite</string>
    <string name="list_of_favorite_tv_show">List of Favorite TV Show</string>
    <string name="favorite_tv_show">Favorite TV Show</string>
    <string name="empty_text">NO DATA</string>
    <string name="image_widget_item_movie">Image Widget Item Movie</string>
    <string name="image_widget_item_tvshow">Image Widget Item TVShow</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="not_empty">please fill out this field</string>
    <string name="three_characters">minimum 3 characters</string>
    <string name="reminder">Reminder</string>
    <string name="settings_reminder">Settings Reminder</string>
    <string name="consumer_app">Consumer App</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
