<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".details.details_tv.TVShowDetails"
    tools:showIn="@layout/activity_tvshow_details">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/title_detail"
            android:textColor="#FF5722"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/constraint_detail"
            app:layout_constraintStart_toStartOf="@id/constraint_detail"
            app:layout_constraintTop_toTopOf="@id/constraint_detail" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/overview"
            android:textColor="#F44336"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ly_content_date_star"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
            app:layout_constraintTop_toBottomOf="@+id/ly_content_date_star" />

        <TextView
            android:id="@+id/tv_overview_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/overview_detail"
            android:textColor="#302D2D"
            app:layout_constraintStart_toStartOf="@+id/tv_overview"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview" />

        <Button
            android:id="@+id/btn_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#7200CA"
            android:text="@string/add_to_favorite"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_overview_detail" />

        <LinearLayout
            android:id="@+id/ly_release_date_ratings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_detail">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/icon_date"
                app:srcCompat="@drawable/ic_date_range_black_24dp" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/icon_star"
                app:srcCompat="@drawable/ic_stars_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_content_date_star"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="@+id/tv_title_detail"
            app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
            app:layout_constraintTop_toBottomOf="@+id/ly_release_date_ratings">

            <TextView
                android:id="@+id/tv_release_date_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/release_date_"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_star"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_10"
                android:textAlignment="center" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>